[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["abhilashkakumanu1 <abhilashkakumanu1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
